# git-cognition

./: .gitignore  Makefile  README.md  git-cognition-v1-spec.md  go.mod  go.sum  main.go  pyproject.toml  spec.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: _common.py  hooks.json  post_tool_use.py  session_end.py  session_start.py  stop.py  user_prompt_submit.py
cmd/: hook.go  ingest.go  init.go  root.go  why.go
cmd/session/: grep.go  ls.go  root.go  show.go  stat.go
git_cognition/: __init__.py  claude_plugin.py  cli.py
git_cognition/commands/: __init__.py  common.py  session_attach.py  session_claude.py  session_claude_live.py  session_grep.py  session_init.py  session_ls.py  session_show.py  session_stat.py  why.py
git_cognition/retrieval/: __init__.py  bm25.py
git_cognition/storage/: __init__.py  git_notes.py  schema.py
git_cognition/writer/: __init__.py  base.py  claude_code.py
internal/capture/: commits.go  commits_test.go  sessionfile.go  sessionfile_test.go  transcript.go  transcript_test.go
internal/config/: config.go  config_test.go
internal/hooks/: post_tool_use.go  post_tool_use_test.go  stop.go  stop_test.go
internal/llm/: client.go  client_test.go  extract.go  extract_test.go
internal/output/: color.go  layout.go  layout_test.go  session.go  why.go
internal/retrieval/: bm25.go  bm25_test.go
internal/storage/: gitnotes.go  (+3 more)
scripts/: e2e-test.sh  install_claude_plugin.sh  install_cli_wrappers.sh  test-llm.sh  uninstall_claude_plugin.sh  uninstall_cli_wrappers.sh
tests/: test_end_to_end.py  test_schema.py
