[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "git-cognition"
version = "0.1.0"
description = "Prototype git provenance tooling for AI-assisted development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
git-why = "git_cognition.cli:why_main"
git-session = "git_cognition.cli:session_main"

[tool.setuptools.packages.find]
include = ["git_cognition*"]
